testcases/error/infinite_recursion.veryl
module infinite_recursion {
    inst u: infinite_recursion;
}
